<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    >
    <LinearLayout
   	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="240dip"
    android:gravity="center_horizontal"
    >
	<TextView  
		android:id="@+id/title"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
   	    android:layout_marginTop="20.0dip"
 	    android:layout_marginBottom="10.0dip"
   	    android:text="@string/title"
   	    />
	<TextView
		android:id="@+id/input"
		android:layout_centerHorizontal="true"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dip"
		android:textColor="#F0F0F0"
		android:text="@string/input"
		android:layout_below="@id/title"
		/>
	<EditText
		android:id="@+id/editText"
		android:layout_centerHorizontal="true"
		android:layout_width="240dip"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dip"
		android:layout_marginBottom="40dip"		
		android:singleLine="true"
		android:inputType="numberDecimal"
		android:layout_below="@id/input"
		/>
		</LinearLayout>
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:gravity="center_horizontal"
		>
	<Button
		android:id="@+id/button1"
		android:layout_centerHorizontal="true"
		android:layout_width="240dip"
		android:layout_height="wrap_content"
		android:text="@string/button1"
		android:layout_weight="1"
		/>
	<Button
		android:id="@+id/button2"
		android:layout_centerHorizontal="true"
		android:layout_width="240dip"
		android:layout_height="wrap_content"
		android:text="@string/button2"
		android:layout_weight="1"
		/>	
	<Button
		android:id="@+id/button3"
		android:layout_centerHorizontal="true"
		android:layout_width="240dip"
		android:layout_height="wrap_content"
		android:text="@string/button3"
		android:layout_weight="1"
		/>	
	<Button
		android:id="@+id/button4"
		android:layout_centerHorizontal="true"
		android:layout_width="240dip"
		android:layout_height="wrap_content"
		android:text="@string/button4"			
		android:layout_marginBottom="20dip"
		android:layout_weight="1"
		/>
			

	</LinearLayout>
</LinearLayout>
