<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    >
    
    <LinearLayout
		android:id="@+id/LinearLayout0"
		android:orientation="horizontal"
    	android:gravity="center_horizontal|clip_horizontal"
    	android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20.0dip"
        android:layout_weight="1"
   	    >
   		<TextView
   			android:id="@+id/customtView0"
   			android:layout_width="140dip"
   			android:layout_height="wrap_content"
			android:text="@string/customView0"
			/>
		<EditText
			android:id="@+id/customEdit0"
			android:layout_width="100dip"
			android:layout_height="wrap_content"
			android:inputType="numberDecimal"	
			android:singleLine="true"		
			/>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/LinearLayout1"
		android:orientation="horizontal"
    	android:gravity="center_horizontal|clip_horizontal"
    	android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
   	    >
   		<TextView
   			android:id="@+id/customtView1"
   			android:layout_width="140dip"
   			android:layout_height="wrap_content"
			android:text="@string/customView1"
			/>
		<EditText
			android:id="@+id/customEdit1"
			android:layout_width="100dip"
			android:layout_height="wrap_content"
			android:inputType="numberDecimal"	
			android:singleLine="true"		
			/>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/LinearLayout2"
		android:orientation="horizontal"
    	android:gravity="center_horizontal|clip_horizontal"
    	android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LinearLayout1"
        android:layout_weight="1"
   	    >
   		<TextView
   			android:id="@+id/customtView2"
   			android:layout_width="140dip"
   			android:layout_height="wrap_content"
			android:text="@string/customView2"
			/>
		<EditText
			android:id="@+id/customEdit2"
			android:layout_width="100dip"
			android:layout_height="wrap_content"
			android:singleLine="true"			
			/>
	</LinearLayout>
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dip"
		android:gravity="center_horizontal"
		android:layout_below="@id/LinearLayout2"
		android:layout_weight="99"
		>
		<TextView
			android:id="@+id/customView3"
			android:layout_width="240dip"			
			android:layout_height="wrap_content"
			android:text="@string/customView3"
			android:visibility="gone"
			android:layout_weight="1"
			/>
		<TextView
			android:gravity="center"
			android:id="@+id/customResult"
			android:layout_width="240dip"
			android:layout_height="wrap_content"
			android:textColor="#ffffff"
			android:textSize="30dip"
			android:layout_weight="99"
			/>		
	</LinearLayout>

 <LinearLayout
 	android:orientation="vertical"
 	android:layout_width="240dip"
 	android:layout_height="wrap_content"
 	android:gravity="bottom"
 	android:layout_marginBottom="10dip"
 	>
 	<Button
   		android:id="@+id/copy"
   		android:layout_width="240dip"
   		android:layout_height="wrap_content"
   		android:text="@string/copy"
   		android:visibility="gone"
   		/>
 	
	<Button
		android:id="@+id/customButton1"
		android:layout_width="240dip"
		android:layout_height="wrap_content"
		android:text="@string/customButton1"			
		/>
	<Button
		android:id="@+id/customButton2"
		android:layout_width="240dip"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:text="@string/back"
		/>
		</LinearLayout>
</LinearLayout>