<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/bg"
    >

	   	 <TextView  
			android:id="@+id/resultView1"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
	   	    android:layout_marginTop="30.0dip"
	   	    android:text="@string/resultView1"
	   	    android:layout_weight="1"
	   	    />       	    
   	   		 />
		<TextView  
			android:id="@+id/resultView2"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:textColor="#FFFFFF"
		    android:textSize="30dip"
	   	    android:layout_marginTop="30.0dip"
	   	    android:layout_weight="1"
	   	    />
	   	 <TextView  
			android:id="@+id/resultView3"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
	   	    android:layout_marginTop="30.0dip"
	   	    android:layout_weight="1"
	   	    />

   	<TextView  
		android:id="@+id/resultView4"
	    android:layout_width="240dip"
	    android:textColor="#FFFFFF" 
	    android:textSize="30dip"
	    android:layout_height="wrap_content" 
 	    android:singleLine="false"
	   	android:gravity="center"
 	    android:layout_weight="99"
   	    />
   	<Button
   		android:id="@+id/copy"
   		android:layout_width="240dip"
   		android:layout_height="wrap_content"
   		android:text="@string/copy"
   		/>
   	<Button
		android:id="@+id/back"
		android:layout_width="240dip"
		android:layout_height="wrap_content"
		android:text="@string/back"
		android:layout_marginBottom="20dip"
		/>

</LinearLayout>